_generated-doc/3.2/config/quarkus-grpc-config-group-config-ssl-server-config.adoc

:summaryTableId: quarkus-grpc-config-group-config-ssl-server-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-config-group-config-ssl-server-config_configuration]]link:#quarkus-grpc-config-group-config-ssl-server-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-certificate]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-certificate[quarkus.grpc.server.ssl.certificate]`


[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key[quarkus.grpc.server.ssl.key]`


[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key-store]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key-store[quarkus.grpc.server.ssl.key-store]`


[.description]
--
An optional key store which holds the certificate information instead of specifying separate files. The key store can be either on classpath or an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key-store-type]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key-store-type[quarkus.grpc.server.ssl.key-store-type]`


[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key-store-password]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-key-store-password[quarkus.grpc.server.ssl.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-trust-store]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-trust-store[quarkus.grpc.server.ssl.trust-store]`


[.description]
--
An optional trust store which holds the certificate information of the certificates to trust

The trust store can be either on classpath or an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-trust-store-type]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-trust-store-type[quarkus.grpc.server.ssl.trust-store-type]`


[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-trust-store-password]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-trust-store-password[quarkus.grpc.server.ssl.trust-store-password]`


[.description]
--
A parameter to specify the password of the trust store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-cipher-suites]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-cipher-suites[quarkus.grpc.server.ssl.cipher-suites]`


[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-protocols]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-protocols[quarkus.grpc.server.ssl.protocols]`


[.description]
--
Sets the ordered list of enabled SSL/TLS protocols.

If not set, it defaults to `"TLSv1.3, TLSv1.2"`. The following list of protocols are supported: `TLSv1, TLSv1.1, TLSv1.2, TLSv1.3`. To only enable `TLSv1.3`, set the value to `to "TLSv1.3"`.

Note that setting an empty list, and enabling SSL/TLS is invalid. You must at least have one protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-client-auth]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus-grpc-server-ssl-client-auth[quarkus.grpc.server.ssl.client-auth]`


[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `request`, `required` 
|`none`

|===